--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,4 +1,5 @@
-@(message: String)
+@import be.objectify.deadbolt.scala.AuthenticatedRequest
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String)(implicit request: AuthenticatedRequest[Any])
 
 @main("Play with Scala.js") {
 <h2>Play and Scala.js share a same message</h2>
