--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -6,7 +6,7 @@
 
 body {
     color: purple;
-    background-color: #b8bacd
+    background-color: lightcyan;
 }
 
 ul {
@@ -15,6 +15,22 @@ ul {
 
 h2 {
     color: darkblue;
+    margin: 10px;
+    border: 5px blue;
+}
+
+h3 {
+    color: firebrick;
+    margin: 10px;
+    border: 5px blue;
+}
+
+.img-circle {
+    border-radius: 50%;
+}
+
+picture {
+    color: #000;
     margin: 10px;
     border: 5px blue;
 }
