--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -25,12 +25,29 @@ h3 {
     border: 5px blue;
 }
 
+img {
+    color: #000;
+    margin: 25px;
+    border: 5px blue;
+}
+
 .img-circle {
     border-radius: 50%;
 }
 
-picture {
-    color: #000;
-    margin: 10px;
-    border: 5px blue;
+input {
+    width: auto;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+button {
+    font-size: x-large;
+    color: white;
+    background: green;
+    padding: 15px;
+    margin: 25px;
+    border: 5px white;
+
 }
