basic login flow works

--- a/server/app/views/signup.scala.html
+++ b/server/app/views/signup.scala.html
@@ -31,6 +31,10 @@
         @helper.inputText(userForm("firstName"))
         @helper.inputText(userForm("familyName"))
         @helper.inputText(userForm("emailAddress"))
+        @helper.inputText(userForm("picture"))
+        @helper.inputText(userForm("socialNetworkName"))
+        @helper.inputText(userForm("socialNetworkUserId"))
+
         <button>Signup</button>
     }
 
