Form labels prettier

--- a/server/app/views/signup.scala.html
+++ b/server/app/views/signup.scala.html
@@ -28,9 +28,9 @@
 
     @helper.form(postUrl) {
         @helper.CSRF.formField
-        @helper.inputText(userForm("firstName"))
-        @helper.inputText(userForm("familyName"))
-        @helper.inputText(userForm("emailAddress"))
+        @helper.inputText(userForm("First Name"))
+        @helper.inputText(userForm("Family Name"))
+        @helper.inputText(userForm("Email Address"))
         <button>Signup</button>
     }
 
