--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -52,6 +52,13 @@
   function signOut() {
       var auth2 = gapi.auth2.getAuthInstance();
       auth2.signOut().then(function () {
+
+          var xhr = new XMLHttpRequest();
+          xhr.open('POST', '/signout');
+          xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+          xhr.setRequestHeader('X-Requested-With', 'Accept');
+          xhr.send();
+
           console.log('User signed out.');
       });
   }
