--- a/server/app/views/timetoteach.scala.html
+++ b/server/app/views/timetoteach.scala.html
@@ -1,5 +1,4 @@
-@
-import be.objectify.deadbolt.scala.AuthenticatedRequest
+@import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String)(implicit request: AuthenticatedRequest[Any])
 
 @main("Time To Teach") {
