mobile first app initial work

--- a/server/app/views/accessFailed.scala.html
+++ b/server/app/views/accessFailed.scala.html
@@ -1,8 +1,6 @@
-<html>
-    <head>
-        <title>Access failed</title>
-    </head>
-    <body>
-        <h3>Access failed</h3>
-    </body>
-</html>
+@mainNonApp("Time To Teach - Access Failed") {
+    <h3>Access failed</h3>
+    <p>
+        You will need to sign in and/or sign up to Time To Teach
+    </p>
+}
