--- a/server/app/views/timetoteach.scala.html
+++ b/server/app/views/timetoteach.scala.html
@@ -1,7 +1,7 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String)(implicit request: AuthenticatedRequest[Any])
 
-@main("Time To Teach") {
+@main("Time To Teach App") {
     <h2>Time To Teach</h2>
     <ul>
         <li>So Play shouts out: <em>@message</em></li>
