--- a/server/app/views/mainNonApp.scala.html
+++ b/server/app/views/mainNonApp.scala.html
@@ -34,13 +34,10 @@
                 </ul>
             </div>
 
-            <div class="box content"></div>
+            <div class="box content">@content</div>
 
             <div class="box footer">Footer</div>
 
         </div>
-
-        <div id="timetoteachApplicationRoot"></div>
-        @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
     </body>
 </html>
