Looks okay with hamburger menu etc

--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -1,5 +1,5 @@
-@mainNonApp("Time To Teach") {
-    <div class="signinoutbutton g-signin2"
+@main("Time To Teach") {
+    <div class="makecenter g-signin2"
     data-longtitle="true"
     data-onsuccess="onSignIn"
     data-theme="light"></div>
