--- a/server/app/views/accessFailed.scala.html
+++ b/server/app/views/accessFailed.scala.html
@@ -1,4 +1,4 @@
-@mainNonApp("Time To Teach - Access Failed") {
+@main("Time To Teach - Access Failed") {
     <h3>Access failed</h3>
     <p>
         You will need to sign in and/or sign up to Time To Teach
