--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -1,7 +1,5 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>@title</title>
@@ -17,6 +15,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+
     </head>
     <body>
         <div class="wrapper">
@@ -26,21 +25,21 @@
             </div>
 
             <div class="box sidebar">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#menu">Simple collapsible</button>
-                <ul id="menu" class="collapse">
+                <button id="main-menu-button" type="button" class="btn btn-default" data-toggle="collapse" data-target="#menuitems">
+                    <IMG id="main-menu-button-img" src="@routes.Assets.versioned("icons/hamburger32.png")" border="0" alt="Main Menu">
+                </button>
+                <ul id="menuitems" class="collapse">
                     <li><a href="@routes.Application.login()">login</a></li>
                     <li><a href="#" onclick="signOut();">logout</a></li>
                     <li><a href="@routes.Application.timeToTeachApp()">app</a></li>
                 </ul>
             </div>
 
-            <div class="box content"></div>
+            <div class="box content">@content</div>
 
             <div class="box footer">Footer</div>
 
         </div>
 
-        <div id="timetoteachApplicationRoot"></div>
-        @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
     </body>
 </html>
