signup flow works a little better

--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -1,5 +1,5 @@
 @main("Time To Teach") {
-    <h2>Time To Teach</h2>
+    <h2>Welcome To Time To Teach!</h2>
 
     <div class="hidden g-signin2" ></div>
 
@@ -9,4 +9,8 @@
     <div>
         Some stuff here etc etc
     </div>
+
+    <p>
+        Once logged in you can access our <a href="@routes.Application.timeToTeachApp()" >application</a>
+    </p>
 }
