--- a/server/app/views/signup.scala.html
+++ b/server/app/views/signup.scala.html
@@ -8,9 +8,9 @@
 <html>
     <head>
         <title>Signup to TimeToTeach</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/signup.css")">
     </head>
-    <body>
+    <body id="signup-body">
 
         <h2>Hi @userFirstName!</h2>
         <h3>Sign up to Time To Teach</h3>
