--- a/server/app/views/timetoteach.scala.html
+++ b/server/app/views/timetoteach.scala.html
@@ -2,7 +2,12 @@
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String)(implicit request: AuthenticatedRequest[Any])
 
 @main("Time To Teach App") {
-    <h2>Time To Teach</h2>
+    <h2>Application</h2>
+    <p>
+        With our application we aim to give all primary school teachers more 'Time To Teach' ...
+    </p>
+    <br>
+    -------------
     <ul>
         <li>So Play shouts out: <em>@message</em></li>
         <li>Scala.js shouts out: <em id="scalajsShoutOut"></em></li>
