--- a/server/app/views/signedupcongrats.scala.html
+++ b/server/app/views/signedupcongrats.scala.html
@@ -1,12 +1,17 @@
 <html>
     <head>
         <title>Time To Teach</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/signup.css")">
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
     </head>
     <body>
 
         <h2>Congratulations</h2>
         <h3>You have signed up to Time To Teach</h3>
+
+        <script>
+            window.setTimeout(goToHome, 1000);
+        </script>
 
     </body>
 
