--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -1,10 +1,9 @@
-* {
-    margin: 0;
-}
 
-body {
-    background-color: white;
-    margin: 5px;
+h2 {
+    font-size: large;
+    font-weight: bold;
+    color: lightgoldenrodyellow;
+    text-align: center;
 }
 
 div {
@@ -34,12 +33,13 @@ a:hover {
     color: #fff;
     border-radius: 5px;
     padding: 6px;
-    font-size: 150%;
+    font-size: 120%;
 }
 
 .header {
     grid-area: header;
     text-align: center;
+    font-size: 170%;
 }
 
 .sidebar {
@@ -66,23 +66,22 @@ a:hover {
 }
 
 ul {
-    list-style-type: none
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 li {
     margin: 0;
-}
-
-#main-menu-button {
-    float: right;
+    padding: 0;
 }
 
 #main-menu-button-img {
     width: 16px !important;
     height: 16px !important;
-    float: right;
 }
 
 #menuitems {
     align-content: flex-start;
 }
+
