flow is a little nicer for first time user

--- a/server/app/views/signedupcongrats.scala.html
+++ b/server/app/views/signedupcongrats.scala.html
@@ -10,7 +10,7 @@
         <h3>You have signed up to Time To Teach</h3>
 
         <script>
-            window.setTimeout(goToHome, 1000);
+            window.setTimeout(goToApp, 1000);
         </script>
 
     </body>
