--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -8,6 +8,7 @@
         <meta name="google-signin-client_id"
         content="19438371353-1gljfancidnfrtjdt2ic22hd3ib4fab0.apps.googleusercontent.com">
         <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -18,6 +19,7 @@
 
     </head>
     <body>
+        <div class="hidden g-signin2" ></div>
         <div class="wrapper">
 
             <div class="box header">
