show user picture when logged into the app

--- a/server/app/views/login.scala.html
+++ b/server/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@main("Time To Teach") {
+@main("Time To Teach", None, None) {
     <div class="makecenter g-signin2"
     data-longtitle="true"
     data-onsuccess="onSignIn"
