--- a/server/app/views/signup.scala.html
+++ b/server/app/views/signup.scala.html
@@ -32,7 +32,7 @@
 
     <picture>
         <source media="(min-width: 50px)" srcset="@userPictureUri">
-        <img class="img-circle" src="@userPictureUri" alt="" style="width: auto;">
+        <img class="img-circle-standard" src="@userPictureUri" alt="" style="width: auto;">
     </picture>
 
     @helper.form(postUrl) {
