--- a/server/app/views/accessFailed.scala.html
+++ b/server/app/views/accessFailed.scala.html
@@ -1,6 +1,6 @@
-@main("Time To Teach - Access Failed") {
+@main("Time To Teach - Access Failed", None, None) {
     <h3>Access failed</h3>
     <p>
-        You will need to sign in and/or sign up to Time To Teach
+        You will need to <a href="@routes.Application.login()">sign in</a> to use Time To Teach
     </p>
 }
