--- a/server/app/views/timetoteach.scala.html
+++ b/server/app/views/timetoteach.scala.html
@@ -1,7 +1,7 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String)(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@main("Time To Teach App") {
+@main("Time To Teach App", userPictureUri, userFirstName) {
     <h2>Application</h2>
     <p>
         With our application we aim to give all primary school teachers more 'Time To Teach' ...
