--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -101,3 +101,12 @@ li {
     align-content: flex-start;
 }
 
+.timetoteachDashboardRoot {
+    display: grid;
+    grid-gap: 2px;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: "header" "content";
+    background-color: #fff;
+    border-radius: 5px;
+    color: #444;
+}
