--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -47,7 +47,7 @@
 
             <div class="box content">@content</div>
 
-            <div class="box footer">Footer</div>
+            <div class="box footer">Time To Teach (c) 2017</div>
 
         </div>
 
