--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -2,7 +2,7 @@
 h2 {
     font-size: large;
     font-weight: bold;
-    color: lightgoldenrodyellow;
+    color: steelblue;
     text-align: center;
 }
 
@@ -12,7 +12,7 @@ div {
 
 a {
     text-decoration: none;
-    color: white;
+    color: steelblue;
 }
 
 a:hover {
@@ -29,8 +29,8 @@ a:hover {
 }
 
 .box {
-    background-color: steelblue;
-    color: #fff;
+    background-color: white;
+    color: steelblue;
     border-radius: 5px;
     padding: 6px;
     font-size: 120%;
@@ -38,8 +38,9 @@ a:hover {
 
 .header {
     grid-area: header;
-    text-align: center;
-    font-size: 170%;
+    text-align: left;
+    font-size: 190%;
+
 }
 
 .sidebar {
@@ -68,7 +69,13 @@ a:hover {
 }
 
 .footer {
+    /*margin-top: 100px;*/
     grid-area: footer;
+    font-size: smaller;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px; /* Height of the footer */
 }
 
 .makecenter {
@@ -101,12 +108,3 @@ li {
     align-content: flex-start;
 }
 
-.timetoteachDashboardRoot {
-    display: grid;
-    grid-gap: 2px;
-    grid-template-columns: 3fr 1fr;
-    grid-template-areas: "header" "content";
-    background-color: #fff;
-    border-radius: 5px;
-    color: #444;
-}
