Basic dashboard and icons setup

--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,8 +1,8 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@main("Time To Teach App", userPictureUri, userFirstName) {
+    @main("Time To Teach App", userPictureUri, userFirstName) {
 
-        <h2>Dashboard</h2>
+    This is a class timetable
 
-}
+    }
