--- a/server/app/views/loggedOutSuccessfully.scala.html
+++ b/server/app/views/loggedOutSuccessfully.scala.html
@@ -1,5 +1,5 @@
 @main("Time To Teach",None, None) {
-    <h3>Logged Out Successfully</h3>
+    <p>Logged Out Successfully</p>
 
     <script>
             window.setTimeout(goToHome, 1000);
