--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -11,39 +11,65 @@
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-
     </head>
     <body>
         <div class="hidden g-signin2" ></div>
         <div class="wrapper">
-
-            <div class="box header">
-                <a href="@routes.Application.index()">Time To Teach</a>
-            </div>
-
-            <div class="box sidebar sidebarwrapper">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav-bar">
+                <div class="box sidebar sidebarwrapper">
                 @if(userPictureUri.isDefined) {
                     <picture class="sidebar-user-icon">
                         <source media="(min-width: 50px)" srcset="@userPictureUri">
                         <img class="img-circle-small" src="@userPictureUri" alt="" style="width: auto;">
                     </picture>
                 }
+                </div>
 
-                <button id="main-menu-button" type="button" class="btn btn-xs btn-default sidebar-hamburger" data-toggle="collapse" data-target="#menuitems">
-                    <IMG id="main-menu-button-img" src="@routes.Assets.versioned("icons/hamburger32.png")" border="0" alt="Main Menu">
+                <a class="navbar-brand" href="#">Time To Teach</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">
+                        <IMG id="main-menu-button-img" src="@routes.Assets.versioned("icons/hamburger32.svg")" alt="Main Menu">
+                    </span>
                 </button>
-                <ul id="menuitems" class="collapse">
-                    <li><a href="@routes.Application.login()">login</a></li>
-                    <li><a href="#" onclick="signOut();">logout</a></li>
-                    <li><a href="@routes.Application.timeToTeachApp()">app</a></li>
-                </ul>
 
-            </div>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active"><a href="@routes.Application.login()">Login</a></li>
+                        <li class="nav-item"><a href="#" onclick="signOut();">Logout</a></li>
+                        <li class="nav-item"><a href="@routes.Application.timeToTeachApp()">Dashboard</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            @if(userPictureUri.isDefined) {
+                <div class="app-nav-bar">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@routes.Application.timeToTeachApp()">
+                                <IMG class="nav-icon" data-toggle="tooltip" title="Dashboard - Home" src="@routes.Assets.versioned("icons/home256.png")">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tooltip" title="Weekly Planning" href="#">
+                                <IMG class="nav-icon" src="@routes.Assets.versioned("icons/weeklyPlanning.png")" >
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tooltip" title="Termly Planning" href="#">
+                                <IMG class="nav-icon" src="@routes.Assets.versioned("icons/termlyPlan.png")">
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tooltip" title="Class Timetable" href="@routes.Application.classTimetable()">
+                                <IMG class="nav-icon" src="@routes.Assets.versioned("icons/classTimetable.png")">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            }
 
             <div class="box content">@content</div>
 
@@ -51,5 +77,9 @@
 
         </div>
 
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     </body>
 </html>
