--- a/server/public/stylesheets/dashboard.css
+++ b/server/public/stylesheets/dashboard.css
@@ -3,16 +3,15 @@
     grid-gap: 20px;
     grid-template-columns: 1fr 10fr 1fr;
     grid-template-areas:
-            "dashboard-header dashboard-header dashboard-header"
+            "the-nav-bar the-nav-bar the-nav-bar"
             ". dashboard-button1 ."
             ". dashboard-button2 ."
             ". dashboard-button3 .";
-    background-color: #fff;
     border-radius: 5px;
 }
 
-.dashboard-header {
-    grid-area: dashboard-header;
+.the-nav-bar {
+    grid-area: the-nav-bar;
     margin-top:10px;
 }
 
