--- a/server/public/stylesheets/defaultGrid.css
+++ b/server/public/stylesheets/defaultGrid.css
@@ -2,7 +2,6 @@
 h2 {
     font-size: large;
     font-weight: bold;
-    color: steelblue;
     text-align: center;
 }
 
@@ -12,7 +11,7 @@ div {
 
 a {
     text-decoration: none;
-    color: steelblue;
+    color: white;
 }
 
 a:hover {
@@ -22,25 +21,25 @@ a:hover {
 .wrapper {
     display: grid;
     grid-gap: 2px;
-    grid-template-columns: 3fr 1fr;
-    grid-template-areas: "header sidebar" "content content" "footer footer";
-    background-color: #fff;
-    color: #444;
+    grid-template-columns: 1fr;
+    grid-template-areas: "main-nav-bar" "app-nav-bar" "content" "footer";
+    /*background-color: #fff;*/
+    /*color: #444;*/
 }
 
 .box {
-    background-color: white;
-    color: steelblue;
+    /*color: steelblue;*/
     border-radius: 5px;
     padding: 6px;
-    font-size: 120%;
+    font-size: 90%;
 }
 
-.header {
-    grid-area: header;
-    text-align: left;
-    font-size: 190%;
+.main-nav-bar {
+    grid-area: main-nav-bar;
+}
 
+.app-nav-bar {
+    grid-area: app-nav-bar;
 }
 
 .sidebar {
@@ -106,5 +105,10 @@ li {
 
 #menuitems {
     align-content: flex-start;
+}
+
+.nav-icon {
+    width: 24px !important;
+    height: 24px !important;
 }
 
