--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -9,6 +9,6 @@
     </div>
 
     <p>
-        Once logged in you can access our <a href="@routes.Application.timeToTeachApp()" >application</a>
+        Once logged in you can access your <a class="non-white-link" href="@routes.Application.timeToTeachApp()" >dashboard</a>
     </p>
 }
